1st part complete

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width" >
             <H1>WELCOME TO</H1>
-        <h1><span class="name">TAWHID HASAN</span> WORLD</h1>
+        <h1><span class="name">TAWHID HASAN</span> PROFILE</h1>
         <h3>MUSOLMAN & UPCOMING PROGRAMMER</h3>
         <p>You might wonder what else he can do. Its him who can play football and do skills with it. He is a left winger. Tawhid want to learn this programming things just to earn money and make life easier which is a wrong thing with the motive. Everyone should know the harm of this monitor and the pain that gives you when you are doing the programming things.
         </p>
