2nd portion done

--- a/index.html
+++ b/index.html
@@ -25,5 +25,15 @@
             <img src="image/image.png" alt="">
         </div>
     </section>
+    <section class="middle-banner">
+        <div class="half-width"><img src="image/2ndimage.png" alt=""></div>
+        <div class="half-width">
+            <h1>DREAM BIG</h1>
+            <h3>Become a Programmer</h3>
+            <p id="hola">In this world no one know what will happen next with him/her but they wanted to make things better. This world is full of hate thunder and it became so much powerful that anyone who wanted to be good day by day can't be that guy. I always wanted to know about the time travel. How time works. I wanted to know about the multiverse. This type of topics make my dopamin erase.
+            </p>
+            <a id="hire" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/tawhidhasan.tonmoy/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 </html>
