--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="image/image.png" alt="">
         </div>
     </section>
-    <section class="middle-banner">
+    <section >
         <div class="half-width"><img src="image/2ndimage.png" alt=""></div>
         <div class="half-width">
             <h1>DREAM BIG</h1>
@@ -35,5 +35,24 @@
             <a id="hire" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/tawhidhasan.tonmoy/">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <h1>EXPERIENCES</h1>
+    <section class="holla">
+            <div id="one" class="ex-item" >
+                <h1>Full Stack Web Developer</h1>
+                <h3><span class="name">ki lekhmu issa kortase nah ekhn</span></h3>
+                <p>life is so unfair for somebody. Why it happens I don't know. Is that anyone's fault? Someone have a life with a lot of money and also have a beautiful family. They have everything they want in life. but some of the people around the world doesn't have this kind of life. I had meet a boy who was crying for some food the day before Eid ul Adha. All he wanted was food. but he didn't get any</p>
+    
+            </div>
+            <div id="two" class="ex-item">
+                <h1>Baby Web Developer</h1>
+                <h3><span class="name">baccha kaler web Developer ami</span></h3>
+                <p>On the otherhand there are some people whom are so priviliged that they can eat food and also waste it. I always wonder how they will meet up with Allah.
+                How the judgement will happen for both of them. May Allah give both of them Jannatul Ferdous. for me this unfair things are not normal because I don't know the deept things. I'm greatful for what I have. Alhamdulillah.
+                </p>
+            </div>
+    </section>
+    <footer>
+        SAY MASHAALLAH, DO NOT SHARE!!!
+    </footer>
 </body>
 </html>
